--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Nexus Defense Game",
   "main": "server.js",
   "scripts": {
-    "start": "yarn run http-server -p 7000"
+    "start1": "yarn run http-server -p 7000",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,9 @@
   "homepage": "https://github.com/ardama/nexus-defense#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "next": "^7.0.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
