--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
     "browser-sync": "^2.24.7",
@@ -26,7 +27,7 @@
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
     "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
     "phaser": "3.12.0",
